{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 421,
  "lineage": "997f9751-7394-8949-8be6-33fad7d8751c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc5c0ae369920c2b",
            "association_id": "eipassoc-03a6370bf31e1142a",
            "domain": "vpc",
            "id": "eipalloc-0dc5c0ae369920c2b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00e225c94a62fc622",
            "private_dns": "ip-172-31-2-84.ec2.internal",
            "private_ip": "172.31.2.84",
            "public_dns": "ec2-3-217-198-64.compute-1.amazonaws.com",
            "public_ip": "3.217.198.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d6a7b26f06b3407",
            "association_id": "eipassoc-02a9aecd3ebb8317a",
            "domain": "vpc",
            "id": "eipalloc-06d6a7b26f06b3407",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e50296c28bf4ba4c",
            "private_dns": "ip-172-31-3-50.ec2.internal",
            "private_ip": "172.31.3.50",
            "public_dns": "ec2-50-16-136-11.compute-1.amazonaws.com",
            "public_ip": "50.16.136.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031156ccadfb02e44",
            "arn": "arn:aws:ec2:us-east-1:278576220453:instance/i-05793deccde9ed7e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05793deccde9ed7e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "hugo-ed25519-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0341ad39c80eae174",
            "private_dns": "ip-172-31-2-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.109",
            "public_dns": "ec2-44-198-175-10.compute-1.amazonaws.com",
            "public_ip": "44.198.175.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-031f14fea07ca26a3",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04bd33880510b1ce8",
            "tags": {
              "TeleportCluster": "hugo-tf",
              "TeleportRole": "bastion"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf",
              "TeleportRole": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031cfaab7e2c3680e"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_ami.base",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "teleport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:internet-gateway/igw-0d05ab72af7ce882d",
            "id": "igw-0d05ab72af7ce882d",
            "owner_id": "278576220453",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-auth/12d09125b2639521",
            "arn_suffix": "net/hugo-tf-auth/12d09125b2639521",
            "dns_name": "hugo-tf-auth-12d09125b2639521.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-auth/12d09125b2639521",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hugo-tf-auth",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04bd33880510b1ce8"
              },
              {
                "subnet_id": "subnet-0d613cf4ef9e1c89c"
              }
            ],
            "subnets": [
              "subnet-04bd33880510b1ce8",
              "subnet-0d613cf4ef9e1c89c"
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-monitor/ccf8ae6a18e315d9",
            "arn_suffix": "net/hugo-tf-monitor/ccf8ae6a18e315d9",
            "dns_name": "hugo-tf-monitor-ccf8ae6a18e315d9.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-monitor/ccf8ae6a18e315d9",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hugo-tf-monitor",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04bd33880510b1ce8"
              }
            ],
            "subnets": [
              "subnet-04bd33880510b1ce8"
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "arn_suffix": "net/hugo-tf-proxy/97bbde62b85cf2a1",
            "dns_name": "hugo-tf-proxy-97bbde62b85cf2a1.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hugo-tf-proxy",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04bd33880510b1ce8"
              },
              {
                "subnet_id": "subnet-0d613cf4ef9e1c89c"
              }
            ],
            "subnets": [
              "subnet-04bd33880510b1ce8",
              "subnet-0d613cf4ef9e1c89c"
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-auth/12d09125b2639521/97098dc763be016a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-auth/a8970966b665d33a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-auth/12d09125b2639521/97098dc763be016a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-auth/12d09125b2639521",
            "port": 3025,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.auth",
            "aws_lb_target_group.auth",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-monitor/ccf8ae6a18e315d9/658a1e4b0e87d001",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-monitor/e045bf563c1dd5ac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-monitor/ccf8ae6a18e315d9/658a1e4b0e87d001",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-monitor/ccf8ae6a18e315d9",
            "port": 8086,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.monitor",
            "aws_lb_target_group.monitor",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/ee1f830f0ac6c700",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-grafana/885196d5a75b2356",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/ee1f830f0ac6c700",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 8443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_grafana",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_kube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/cbfb2509642e5dfc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-kube/632ae6e87a942be4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/cbfb2509642e5dfc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 3026,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_kube",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/0f39731a7962b0f2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-mongodb/0df20bab7f6c3990",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/0f39731a7962b0f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 27017,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_mongodb",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/f61a75ad7048e0c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-mysql/20fcf0960ca2c905",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/f61a75ad7048e0c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 3036,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_mysql",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/928a771699fda0f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-postgres/30c595ff28504a13",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/928a771699fda0f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 5432,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_postgres",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/a075f995659e7649",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-proxy/f0b5bf0d8f52d290",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/a075f995659e7649",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 3023,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_proxy",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "proxy_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/101096063600e277",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-web/47dbd2cbbaaec021",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:listener/net/hugo-tf-proxy/97bbde62b85cf2a1/101096063600e277",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:loadbalancer/net/hugo-tf-proxy/97bbde62b85cf2a1",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.proxy",
            "aws_lb_target_group.proxy_web",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-auth/a8970966b665d33a",
            "arn_suffix": "targetgroup/hugo-tf-auth/a8970966b665d33a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-auth/a8970966b665d33a",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-auth",
            "port": 3025,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-monitor/e045bf563c1dd5ac",
            "arn_suffix": "targetgroup/hugo-tf-monitor/e045bf563c1dd5ac",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-monitor/e045bf563c1dd5ac",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-monitor",
            "port": 8086,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-grafana/885196d5a75b2356",
            "arn_suffix": "targetgroup/hugo-tf-proxy-grafana/885196d5a75b2356",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-grafana/885196d5a75b2356",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-grafana",
            "port": 8443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_kube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-kube/632ae6e87a942be4",
            "arn_suffix": "targetgroup/hugo-tf-proxy-kube/632ae6e87a942be4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-kube/632ae6e87a942be4",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-kube",
            "port": 3026,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-mongodb/0df20bab7f6c3990",
            "arn_suffix": "targetgroup/hugo-tf-proxy-mongodb/0df20bab7f6c3990",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-mongodb/0df20bab7f6c3990",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-mongodb",
            "port": 27017,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-mysql/20fcf0960ca2c905",
            "arn_suffix": "targetgroup/hugo-tf-proxy-mysql/20fcf0960ca2c905",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-mysql/20fcf0960ca2c905",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-mysql",
            "port": 3036,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-postgres/30c595ff28504a13",
            "arn_suffix": "targetgroup/hugo-tf-proxy-postgres/30c595ff28504a13",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-postgres/30c595ff28504a13",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-postgres",
            "port": 5432,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-proxy/f0b5bf0d8f52d290",
            "arn_suffix": "targetgroup/hugo-tf-proxy-proxy/f0b5bf0d8f52d290",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-proxy/f0b5bf0d8f52d290",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-proxy",
            "port": 3023,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-web/47dbd2cbbaaec021",
            "arn_suffix": "targetgroup/hugo-tf-proxy-web/47dbd2cbbaaec021",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:278576220453:targetgroup/hugo-tf-proxy-web/47dbd2cbbaaec021",
            "lambda_multi_value_headers_enabled": false,
            "name": "hugo-tf-proxy-web",
            "port": 3080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "teleport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc5c0ae369920c2b",
            "connectivity_type": "public",
            "id": "nat-0b7724d307ffe5b36",
            "network_interface_id": "eni-00e225c94a62fc622",
            "private_ip": "172.31.2.84",
            "public_ip": "3.217.198.64",
            "subnet_id": "subnet-04bd33880510b1ce8",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.teleport",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d6a7b26f06b3407",
            "connectivity_type": "public",
            "id": "nat-0112395c8dc72c7c3",
            "network_interface_id": "eni-0e50296c28bf4ba4c",
            "private_ip": "172.31.3.50",
            "public_ip": "50.16.136.11",
            "subnet_id": "subnet-0d613cf4ef9e1c89c",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.teleport",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e634c1501869503a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7724d307ffe5b36",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e634c1501869503a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.teleport",
            "aws_nat_gateway.teleport",
            "aws_route_table.auth",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9bd9fa3c939408e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0112395c8dc72c7c3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9bd9fa3c939408e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.teleport",
            "aws_nat_gateway.teleport",
            "aws_route_table.auth",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-075fd5a0d93fa22d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7724d307ffe5b36",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075fd5a0d93fa22d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.teleport",
            "aws_nat_gateway.teleport",
            "aws_route_table.node",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aea98cfee822f2ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0112395c8dc72c7c3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aea98cfee822f2ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.teleport",
            "aws_nat_gateway.teleport",
            "aws_route_table.node",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d05ab72af7ce882d",
            "id": "r-rtb-08c1d4ecbe0ad7f8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c1d4ecbe0ad7f8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.teleport",
            "aws_route_table.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d05ab72af7ce882d",
            "id": "r-rtb-01178aa27f308c9c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01178aa27f308c9c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.teleport",
            "aws_route_table.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:route-table/rtb-0e634c1501869503a",
            "id": "rtb-0e634c1501869503a",
            "owner_id": "278576220453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7724d307ffe5b36",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:route-table/rtb-0a9bd9fa3c939408e",
            "id": "rtb-0a9bd9fa3c939408e",
            "owner_id": "278576220453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0112395c8dc72c7c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:route-table/rtb-075fd5a0d93fa22d5",
            "id": "rtb-075fd5a0d93fa22d5",
            "owner_id": "278576220453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7724d307ffe5b36",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:route-table/rtb-0aea98cfee822f2ef",
            "id": "rtb-0aea98cfee822f2ef",
            "owner_id": "278576220453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0112395c8dc72c7c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:route-table/rtb-08c1d4ecbe0ad7f8b",
            "id": "rtb-08c1d4ecbe0ad7f8b",
            "owner_id": "278576220453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d05ab72af7ce882d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:route-table/rtb-01178aa27f308c9c5",
            "id": "rtb-01178aa27f308c9c5",
            "owner_id": "278576220453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d05ab72af7ce882d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59e8f5d56625f8c",
            "route_table_id": "rtb-0e634c1501869503a",
            "subnet_id": "subnet-05c78a98c1b8f7ffd"
          },
          "dependencies": [
            "aws_route_table.auth",
            "aws_subnet.auth",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a9aecbd0a5e3681",
            "route_table_id": "rtb-0a9bd9fa3c939408e",
            "subnet_id": "subnet-0bb22b0b59a28b247"
          },
          "dependencies": [
            "aws_route_table.auth",
            "aws_subnet.auth",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bfb0fa4a5a0076b",
            "route_table_id": "rtb-075fd5a0d93fa22d5",
            "subnet_id": "subnet-09ec0ce73066ae343"
          },
          "dependencies": [
            "aws_route_table.node",
            "aws_subnet.node",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b65a2175e08963a",
            "route_table_id": "rtb-0aea98cfee822f2ef",
            "subnet_id": "subnet-08892d43c50f5ebae"
          },
          "dependencies": [
            "aws_route_table.node",
            "aws_subnet.node",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4159c6af87a796d",
            "route_table_id": "rtb-08c1d4ecbe0ad7f8b",
            "subnet_id": "subnet-04bd33880510b1ce8"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01db189c8789ce509",
            "route_table_id": "rtb-01178aa27f308c9c5",
            "subnet_id": "subnet-0d613cf4ef9e1c89c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:security-group/sg-0817b3b086c520266",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0817b3b086c520266",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.2.0/24",
                  "172.31.3.0/24",
                  "172.31.4.0/22",
                  "172.31.8.0/22"
                ],
                "description": "",
                "from_port": 3025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090ea0772c1685b56"
                ],
                "self": false,
                "to_port": 3025
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031cfaab7e2c3680e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hugo-tf-auth",
            "name_prefix": "",
            "owner_id": "278576220453",
            "revoke_rules_on_delete": false,
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:security-group/sg-031cfaab7e2c3680e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031cfaab7e2c3680e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hugo-tf-bastion",
            "name_prefix": "",
            "owner_id": "278576220453",
            "revoke_rules_on_delete": false,
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:security-group/sg-0f1d2353f9d9fd59a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1d2353f9d9fd59a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8086
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031cfaab7e2c3680e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hugo-tf-monitor",
            "name_prefix": "",
            "owner_id": "278576220453",
            "revoke_rules_on_delete": false,
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:security-group/sg-0a69b07ab163fc62b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a69b07ab163fc62b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031cfaab7e2c3680e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3022,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090ea0772c1685b56"
                ],
                "self": false,
                "to_port": 3022
              }
            ],
            "name": "hugo-tf-node",
            "name_prefix": "",
            "owner_id": "278576220453",
            "revoke_rules_on_delete": false,
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:security-group/sg-090ea0772c1685b56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090ea0772c1685b56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3023,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3023
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3026,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3026
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3036,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3036
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031cfaab7e2c3680e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hugo-tf-proxy",
            "name_prefix": "",
            "owner_id": "278576220453",
            "revoke_rules_on_delete": false,
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.teleport"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "auth_egress_allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1455600873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0817b3b086c520266",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.auth",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "auth_ingress_allow_cidr_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.2.0/24",
              "172.31.3.0/24"
            ],
            "description": "",
            "from_port": 3025,
            "id": "sgrule-4197494255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0817b3b086c520266",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3025,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.auth",
            "aws_subnet.public",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "auth_ingress_allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-3094671738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0817b3b086c520266",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.auth",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "auth_ingress_allow_node_cidr_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.4.0/22",
              "172.31.8.0/22"
            ],
            "description": "",
            "from_port": 3025,
            "id": "sgrule-197210801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0817b3b086c520266",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3025,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.auth",
            "aws_subnet.node",
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "auth_ingress_allow_public_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3025,
            "id": "sgrule-3583271837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0817b3b086c520266",
            "self": false,
            "source_security_group_id": "sg-090ea0772c1685b56",
            "timeouts": null,
            "to_port": 3025,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.auth",
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "auth_ingress_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1447748840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0817b3b086c520266",
            "self": false,
            "source_security_group_id": "sg-031cfaab7e2c3680e",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.auth",
            "aws_security_group.bastion",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ingress_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2397661840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-031cfaab7e2c3680e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 27017,
            "id": "sgrule-1201066172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "monitor_collector_ingress_allow_vpc_cidr_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "",
            "from_port": 8086,
            "id": "sgrule-313625411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1d2353f9d9fd59a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8086,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.monitor",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "monitor_egress_allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1624135885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f1d2353f9d9fd59a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.monitor",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "monitor_ingress_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-2435868724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1d2353f9d9fd59a",
            "self": false,
            "source_security_group_id": "sg-031cfaab7e2c3680e",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.monitor",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "monitor_ingress_allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8443,
            "id": "sgrule-2332131243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1d2353f9d9fd59a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.monitor",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress_allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4003349654",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a69b07ab163fc62b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_allow_ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-3933326356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a69b07ab163fc62b",
            "self": false,
            "source_security_group_id": "sg-031cfaab7e2c3680e",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.node",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_allow_ssh_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3022,
            "id": "sgrule-2019170184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a69b07ab163fc62b",
            "self": false,
            "source_security_group_id": "sg-090ea0772c1685b56",
            "timeouts": null,
            "to_port": 3022,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_egress_allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-693669613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_egress_bastion_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3999792075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-031cfaab7e2c3680e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_ingress_allow_kube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3026,
            "id": "sgrule-3197853562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3026,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_ingress_allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3036,
            "id": "sgrule-661662844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3036,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_ingress_allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-4245008272",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_ingress_allow_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3023,
            "id": "sgrule-1657872375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3023,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_ingress_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1611651947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": "sg-031cfaab7e2c3680e",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_ingress_allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3080,
            "id": "sgrule-1662890056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090ea0772c1685b56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy",
            "aws_vpc.teleport"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:subnet/subnet-05c78a98c1b8f7ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c78a98c1b8f7ffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278576220453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:subnet/subnet-0bb22b0b59a28b247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb22b0b59a28b247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278576220453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:subnet/subnet-09ec0ce73066ae343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec0ce73066ae343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278576220453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:subnet/subnet-08892d43c50f5ebae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08892d43c50f5ebae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278576220453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:subnet/subnet-04bd33880510b1ce8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd33880510b1ce8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278576220453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:subnet/subnet-0d613cf4ef9e1c89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d613cf4ef9e1c89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278576220453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            },
            "vpc_id": "vpc-00052c0bb45d5dab8"
          },
          "dependencies": [
            "aws_vpc.teleport",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "teleport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278576220453:vpc/vpc-00052c0bb45d5dab8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0b26e956eaa3ae100",
            "default_route_table_id": "rtb-09ee529340dea7997",
            "default_security_group_id": "sg-0c163fda7049809e8",
            "dhcp_options_id": "dopt-7aaffe00",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00052c0bb45d5dab8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ee529340dea7997",
            "owner_id": "278576220453",
            "tags": {
              "TeleportCluster": "hugo-tf"
            },
            "tags_all": {
              "TeleportCluster": "hugo-tf"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}